--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,10 @@ jobs:
       - image: cimg/base:table
 
     steps:
-      name: "Say Tello"
-      command: "echo Hello, Tello"
+      - checkout
+      - run:
+          name: "Say Tello"
+          command: "echo Hello, Tello"
 
 
 # Invoke jobs via workflows
