add say-tello job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
 
   say-tello:
     docker: 
-      - image: cimg/base:table
+      - image: cimg/base:stable
 
     steps:
       - checkout
