add require constraint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,6 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-tello:
-          require:
+          requires:
             - say-hello
       - say-hello
