--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
           command: "echo hello world > output.txt"
 
       - persist_to_workspace:
-          root: /tmp/dir
+          root: /tmp
           paths:
-            - target/output.txt
+            - output.txt
 
   print_hello_world_output:
     docker: 
