--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ workflows:
   say-hello-workflow:
     jobs:
       - save_hello_world_output
-      - print_hello_world_output
+      - print_hello_world_output:
           requires:
             - save_hello_world_output
 
