--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,19 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+commands:
+  print_pipeline_id:
+    steps:
+      - run: echo $CIRCLE_WORKFLOW_ID
+
 jobs:
+  test:
+    docker:
+      - image: cimg/base:stable
+
+    steps:
+      - print_pipeline_id
+    
   save_hello_world_output:
     docker: 
       - image: cimg/base:stable
@@ -36,9 +46,6 @@ jobs:
 workflows:
   say-hello-workflow:
     jobs:
-      - save_hello_world_output
-      - print_hello_world_output:
-          requires:
-            - save_hello_world_output
+      - test
 
 
